added cursor class

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         <img src="light-bulb-on.svg">
         <img src="light-bulb-off.svg"><br>
         <img src="switch.svg"><br>
-        <img class="rotate180" src="switch.svg">
+        <img class="rotate180 switch" src="switch.svg">
         <p>Icons made by Freepik from www.flaticon.com</p>
        <!-- <script type="text/javascript" src="lights.js"></script> -->
+       <!-- addClass, removeClass -->
     </body>
 </html>
