--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     </head>
     <body>
-        <h1>Light's On!</h1>
-        <img src="light-bulb-on.svg">
-        <img src="light-bulb-off.svg"><br>
-        <img src="switch.svg"><br>
-        <img class="rotate180 switch" src="switch.svg">
+        <h1 id="lights-label" align="center">Light's Off!</h1>
+        <img id="lights-on-img" class="center-svg" src="light-bulb-on.svg">
+        <img id="lights-off-img" class="center-svg" src="light-bulb-off.svg"><br>
+        <img id="switch-img" class="rotate180 cursor center-svg" src="switch.svg">
         <p>Icons made by Freepik from www.flaticon.com</p>
-       <!-- <script type="text/javascript" src="lights.js"></script> -->
-       <!-- addClass, removeClass -->
+        <script type="text/javascript" src="lights.js"></script>
     </body>
 </html>
