changed to pointer even

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Lights</title>
         <link href="lights.css" rel="stylesheet">
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="https://code.jquery.com/pep/0.4.0/pep.js"></script>
     </head>
     <body>
         <h1 id="lights-label" align="center">Light's Off!</h1>
