made images smaller

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <h1 id="lights-label" align="center">Light's Off!</h1>
-        <img id="lights-on-img" class="center-svg" src="light-bulb-on.svg">
-        <img id="lights-off-img" class="center-svg" src="light-bulb-off.svg"><br>
-        <img id="switch-img" class="rotate180 cursor center-svg" src="switch.svg">
+        <img id="lights-on-img" class="center-svg" src="light-bulb-on.svg" width="15%">
+        <img id="lights-off-img" class="center-svg" src="light-bulb-off.svg" width="15%"><br>
+        <img id="switch-img" class="rotate180 cursor center-svg" src="switch.svg" width="10%">
         <p>Icons made by Freepik from www.flaticon.com</p>
         <script type="text/javascript" src="lights.js"></script>
     </body>
